@@ -30,6 +30,9 @@ class Viewer extends Application {
 	{
 		$this->data['pagebody'] = 'justone';	// this is the view we want shown
 		$this->data = array_merge($this->data, (array) $this->quotes->get($id));
+                
+                $this->data['average'] = ($this->data['vote_count'] > 0) ? ($this->data['vote_total']/$this->data['vote_count']) : 0;
+                
 		$this->render();
 	}
 
