@@ -164,26 +164,10 @@
 						function(data) {
 							if(!data.error)
 							{
-								/** ONLY FOR THE DEMO, YOU CAN REMOVE THIS CODE **/
-									$('.serverResponse p').html(data.server);
-								/** END ONLY FOR THE DEMO **/
-
-
-								/** Here you can display an alert box, 
-									or use the jNotify Plugin :) http://www.myqjqueryplugins.com/jNotify
-									exemple :	*/
 								if(opts.onSuccess) opts.onSuccess( element, rate );
 							}
 							else
 							{
-
-								/** ONLY FOR THE DEMO, YOU CAN REMOVE THIS CODE **/
-									$('.serverResponse p').html(data.server);
-								/** END ONLY FOR THE DEMO **/
-
-								/** Here you can display an alert box, 
-									or use the jNotify Plugin :) http://www.myqjqueryplugins.com/jNotify
-									exemple :	*/
 								if(opts.onError) opts.onError( element, rate );
 							}
 						},
